# hece

./: .gitignore  1001gazeTrackingMVP.txt  CLAUDE.md  HEMouse_Development_Spec_v2.md  Technical_Solution_Proposal.md
gaze_tracking_mvp/: .gitignore  QUICKSTART.md  README.md  gaze_tracker_standalone.py  requirements.txt
generated_docs/: 02_enhanced_technical_solution_with_latest_research.md  03_hardware_reality_check_report.md  04_hemouse_development_spec_v2.md  05_mode_transition_ux_analysis.md  06_hint_label_design_guide.md  07_summary_sep30.txt  08_keyboard_input_isolation_solution.md  09_low_level_language_analysis.md  10_windows_security_compliance_guide.md  11_mvp_task_list.md  12_mvp_completion_report.md  13_final_delivery_summary.md  14_environment_setup_summary.md  gaze_tracking_integration_feasibility.md
generated_docs/exported/: 双屏跟踪检测export-2.txt  双屏跟踪检测export.txt  技术方案和细节探讨export.txt
hemouse/: .gitignore  PROJECT_INDEX.md  QUICKSTART.md  README.md  UV_GUIDE.md  build.py  main.py  pyproject.toml  requirements.txt  run.bat  run.ps1
hemouse/docs/: ARCHITECTURE.md  DEVELOPMENT.md  USER_GUIDE.md
hemouse/src/core/: __init__.py  element_detector.py  hotkey_manager.py  label_generator.py
hemouse/src/modes/: __init__.py  grid_mode.py  hint_mode.py  mode_manager.py
hemouse/src/ui/: __init__.py  overlay_window.py
hemouse/src/utils/: __init__.py  logger.py
hemouse/tests/: test_all.py
references/: HeMouse_worklog2025.md  hemouse4-why-what-how-briefing.md  noMouse-FER-tuNa-pose.xlsx
